Added search component

--- a/src/AspNetCoreWebApplication/wwwroot/app/views/app.component.html
+++ b/src/AspNetCoreWebApplication/wwwroot/app/views/app.component.html
@@ -3,4 +3,5 @@
   <a [routerLink]="['dashboard']">Dashboard</a>
   <a [routerLink]="['heroes']">Heroes</a>
 </nav>
+<hero-search></hero-search>
 <router-outlet></router-outlet>
